# bamgcode

./: LICENCE  README.md  pyproject.toml
src/bamgcode/: __init__.py  cli.py  gcodeio.py  manipulation.py
tests/: test_gcodeio.py  test_manipulation.py
